[metadata]
name = wutils
version = 1.0.1
description = With Utils
long_description = file: README.md
author = With Madrid
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find:
